feat: make reader updates progressive
